[package]
name = "sol-stream-program"
version = "0.1.0"
edition = "2021"
license = "WTFPL"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-program = "1.11.4"
borsh = "0.9.3"
thiserror = "1.0.31"

[features]
test-bpf = []

[dev-dependencies]
assert_matches = "1.5.0"
solana-program-test = "=1.11.4"
solana-sdk = "=1.11.4"
solana-validator = "=1.11.4"
solana-logger = "=1.11.4"

[lib]
crate-type = ["cdylib", "lib"]
